@@ -9,6 +9,7 @@ v2.4.0 (2019.10.xx)
   - Trigger initial discovery operations to occur after PVR Manager has been fully initialized and is requesting data
   - Wait for initial discoveries to complete before responding to individual PVR Manager data requests (channels, timers, recordings)
   - (Windows) Limit wait for IPv4 network connectivity during wakeup to one minute
+  - Trigger a timer update when notified that the Kodi EPG "days to display" setting(s) have been changed
   - Remove "Startup discovery task delay" advanced setting
 
 v2.3.1 (2019.09.30)
